<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_subheading"
        android:paddingBottom="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/fieldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Project Title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/kickstarter_green" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressFunding"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_subheading"
        android:maxHeight="8dp"
        android:minHeight="0dp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/kickstarter_green"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/projectImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/fieldShortDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textMultiLine"
                    android:textColor="@color/white" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/labelBackers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/project_detail_label_backers" />

                    <EditText
                        android:id="@+id/fieldBackers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="right|center_vertical" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/labelPledged"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/project_detail_label_pledged" />

                    <EditText
                        android:id="@+id/fieldPledged"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="right|center_vertical" />

                    <TextView
                        android:id="@+id/fieldPercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:gravity="right|center_vertical"
                        android:text="TextView" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/labelGoal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/project_detail_label_goal" />

                    <EditText
                        android:id="@+id/fieldGoal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="right|center_vertical" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/labelTimeLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="20dp"
                        android:text="@string/project_detail_label_timeleft" />

                    <EditText
                        android:id="@+id/fieldTimeLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:enabled="false"
                        android:gravity="right|center_vertical" />
                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/fieldDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>