<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/projectPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_subheading"
        android:paddingBottom="0dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/fieldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Project Title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/kickstarter_green" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressFunding"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_subheading"
        android:maxHeight="8dp"
        android:minHeight="0dp" />

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@color/light_gray"
                android:orientation="horizontal" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0" >

                <LinearLayout
                    android:id="@+id/projectDetailContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ScrollView
                        android:id="@+id/scrollView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/kickstarter_green"
                                android:orientation="vertical" >

                                <!--
                                    <ImageView
                                    android:id="@+id/projectImage"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                                -->

                                <org.hummer.kickstalker.view.VideoPlayerImageView
                                    android:id="@+id/projectImage"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0" />

                                <EditText
                                    android:id="@+id/fieldShortDescription"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ems="10"
                                    android:enabled="false"
                                    android:inputType="textMultiLine"
                                    android:textColor="@color/white" >

                                    <requestFocus />
                                </EditText>
                            </LinearLayout>

                            <TableLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/light_gray"
                                android:paddingBottom="5dp"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp" >

                                <TableRow
                                    android:id="@+id/tableRow1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" >

                                    <TextView
                                        android:id="@+id/labelBackers"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingRight="20dp"
                                        android:text="@string/project_detail_label_backers" />

                                    <EditText
                                        android:id="@+id/fieldBackers"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:ems="10"
                                        android:enabled="false"
                                        android:gravity="right|center_vertical" />
                                </TableRow>

                                <TableRow
                                    android:id="@+id/tableRow2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" >

                                    <TextView
                                        android:id="@+id/labelPledged"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingRight="20dp"
                                        android:text="@string/project_detail_label_pledged" />

                                    <EditText
                                        android:id="@+id/fieldPledged"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:ems="10"
                                        android:enabled="false"
                                        android:gravity="right|center_vertical" />

                                    <TextView
                                        android:id="@+id/fieldPercent"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:enabled="false"
                                        android:gravity="right|center_vertical"
                                        android:text="TextView" />
                                </TableRow>

                                <TableRow
                                    android:id="@+id/tableRow3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" >

                                    <TextView
                                        android:id="@+id/labelGoal"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingRight="20dp"
                                        android:text="@string/project_detail_label_goal" />

                                    <EditText
                                        android:id="@+id/fieldGoal"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:ems="10"
                                        android:enabled="false"
                                        android:gravity="right|center_vertical" />
                                </TableRow>

                                <TableRow
                                    android:id="@+id/tableRow4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" >

                                    <TextView
                                        android:id="@+id/labelTimeLeft"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingRight="20dp"
                                        android:text="@string/project_detail_label_timeleft" />

                                    <EditText
                                        android:id="@+id/fieldTimeLeft"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:ems="10"
                                        android:enabled="false"
                                        android:gravity="right|center_vertical" />
                                </TableRow>
                            </TableLayout>

                            <EditText
                                android:id="@+id/fieldDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:enabled="false"
                                android:inputType="textMultiLine" />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/projectTierContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical" >

                    <ProgressBar
                        android:id="@+id/tierProgressBar"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/projectUpdateContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical" >

                    <ProgressBar
                        android:id="@+id/updateProgressBar"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/projectCommentContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical" >

                    <ProgressBar
                        android:id="@+id/commentProgressBar"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>